--- a/CSS/style.css
+++ b/CSS/style.css
@@ -550,3 +550,106 @@ h2 {
 }
 
 /* team area ends */
+/* testimonials */
+.testi_bg{
+  width: 100%;
+  height: 420px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.testi_content{
+  width: 1200px;
+  height: 420px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.testi_bg .testi_content .testi_head {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.testi_bg .testi_content .testi_a{
+  width: 1200px;
+  height: 320px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+
+}
+.testi_bg .testi_content .testi_a .testi_details{
+  width: 550px;
+  height: 320px;
+  background: #fff;
+
+}
+
+
+
+.testi_bg .testi_content .testi_a .testi_details .testi_img{
+  width: 100px;
+  height: 80px;
+  border-radius: 50%;
+  margin:auto;
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para{
+  width: 550px;
+  height:200px;
+  background: #f1f1f1;
+  display: flex;
+  margin-top: 40px;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+    box-shadow: 2px 2px 10px gray;
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para .box{
+  width: 50px;
+  height: 50px;
+  background: #f1f1f1;
+  rotate: 45deg;
+  position: absolute;
+  top: -7px;
+  left: 47%;
+  transform: translateX(-50%);
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para h4{
+  font-family: oswald_med;
+  color: #555555;
+  text-transform: uppercase;
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para h3{
+  font-family: oswald_med;
+  color: #555555;
+  text-transform: uppercase;
+  margin-top: 5px;
+
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para span{
+  font-family: oswald_reg;
+  color: #5bc5f4;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para span i{
+  padding-left: 5px;
+}
+.testi_bg .testi_content .testi_a .testi_details .testi_para p{
+  font-size: 13px;
+  color: #555555;
+  font-family: "opensans_reg";
+  padding: 0 10px;
+  text-align: center;
+}
+/* testimonials */
+/* footer area */
+
+
+/* footer area */
